# perso-sdk-python

./: .gitignore  README.md  pyproject.toml  test_basic.py
scripts/: build_fixtures.sh
src/perso_sdk/: __init__.py  _wasm.py  client.py  transports.py  types.py
tests/: test_integration.py
tests/fixtures/: .gitignore
