[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "perso-sdk"
version = "0.1.0"
description = "Python SDK for perso — an embedded WASM ABAC policy engine for MCP tool-call authorization"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "teknokeras" }]
dependencies = [
    "wasmtime>=20.0.0",
]

[project.optional-dependencies]
http = ["requests>=2.31.0"]
dev = ["pytest>=8.0.0", "requests>=2.31.0"]

[project.urls]
Homepage = "https://github.com/teknokeras/perso-sdk-python"
Engine = "https://github.com/teknokeras/perso"

[tool.hatch.build.targets.wheel]
packages = ["src/perso_sdk"]

[tool.pytest.ini_options]
pythonpath = ["src"]